# Lama2

./: .air.toml  .gitignore  3  README.md  build.sh  buildAndPublish.sh  build_install_mac.sh  chaining.l2  examples.json  gen.py  go.mod  go.sum  httpelf.go  httpelf.go.bak  httpelf_test.go  httpelf_test.go.bak  install.sh  install_mac.sh  internal_release.sh  l2.go  l2.txt  l2.wasm.go  lama2.go  lint.sh  local_update.sh  localwasmbuild.sh  main.js  makefile  op.json  package.json  pnpm-lock.yaml  releasenotes.sh  req.sh  res.html  rough.txt  run.sh  run_tests.sh  servedoc.sh  testform1.l2  testform2.l2  (+6 more)
docs/: pyproject.toml
docs/Lama2/: api.sh  build.sh  build_cp.sh  mkdocs.yml  serve.sh
elfparser/: README.md  pyproject.toml
elfparser/ElfTestSuite/: .gitignore  n_0001_basic_get_invalid_url.http  n_0002_multipart_reject.l2  n_0003_404.l2  y_0000_basic_get.l2  y_0001_basic_get_url_space.http  y_0002_weird_url.l2  y_0003_post_simple_json.http  y_0004_post_simple_json_single_quoted.http  y_0005_okyc_captcha.http  y_0005_okyc_captcha.l2  y_0006_parse_headers.l2  y_0007_parse_quoted.l2  y_0008_reverse_header_data.http  y_0008_reverse_header_data.l2  y_0009_varjson_basic.http  y_0009_varjson_basic.l2  y_0010_varjson_reverse.http  y_0010_varjson_reverse.l2  y_0011_crazy_comments.l2  y_0012_varjson_multipart.http  y_0012_varjson_multipart.l2  y_0013_varjson_without_file.http  y_0013_varjson_without_file.l2  y_0014_at_equal_ambiguity.l2  y_0015_number_vars.http  y_0016_simple_array.http  y_0017_processor.l2  y_0018_processor_post.l2
elfparser/src/: elfparser.py  parser.py  (+3 more)
(+275 files in other folders)
