[tool.poetry]
name = "recursivedescent"
version = "0.1.0"
description = ""
authors = ["Shrijith Venkatramana <shrijith@hexmos.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
